--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/dudco/2021-web-sojon#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "react": "^17.0.2"
   }
 }
